--- a/index.html
+++ b/index.html
@@ -90,6 +90,20 @@
     
     </section>
 
+    <section class="Testimonial">
+        <div>
+            <img src="images/testimonial.svg" alt="">
+            <div>
+                <h4 >“Each new version brings the best features and the real-time support  I love they are great, keep it up guys please, I recommend "</h4>
+                <div>
+                <p>Jordam Ghomel </p>
+                <p> Design manager at Broq </p>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
 
 
     <script src="main.js"></script>
