Trusted Data Section

--- a/index.html
+++ b/index.html
@@ -104,6 +104,25 @@
 
     </section>
 
+    <section class="Trusted">
+        <div>
+            <div class="main-text">
+                <h3> Trusted Data </h3>
+                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                <a class="button" href="">Learn More </a>
+            </div> 
+            <div class="Ten">
+                <h3>10k</h3>
+                <p>More than 10k users loyal to our software</p>
+            </div>
+            <div class="Seventeen">
+                <h3>17k</h3>
+                <p>Followers on facebook who constantly interact with each improvement</p>
+            </div>
+        </div>
+
+    </section>
+
 
 
     <script src="main.js"></script>
