Trusted Data Secion Alignment

--- a/index.html
+++ b/index.html
@@ -105,10 +105,12 @@
     </section>
 
     <section class="Trusted">
-        <div>
+        <div class="data">
             <div class="main-text">
+                <div>
                 <h3> Trusted Data </h3>
                 <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                </div>
                 <a class="button" href="">Learn More </a>
             </div> 
             <div class="Ten">
