--- a/index.html
+++ b/index.html
@@ -124,6 +124,32 @@
         </div>
 
     </section>
+    <section class="Newsletter">
+        <div class="main-news">
+            <h2>Subscribe to our newsletter</h2>
+            
+            <div class="input">
+                <input type="email" placeholder="Enter your email" required>
+                <a href="#" class="sub-button">Subscribe</a>
+            </div>
+            <p> Stay updated in our newsletter </p>
+        </div>
+    </section>
+
+    <section class="Trial">
+        
+        <div class="main-trial">
+            <div>
+                <h2> Start your Free Trial </h2>
+            </div>
+            <div class="">
+                <input class="" type="email" placeholder="Enter Your Email">
+                <input class="" type="password" placeholder="Enter Your Password">
+                <a href="" class=""> Create Account </a>
+            </div>
+            </div>
+        </div>
+    </section>
 
 
 
