--- a/index.html
+++ b/index.html
@@ -142,14 +142,43 @@
             <div>
                 <h2> Start your Free Trial </h2>
             </div>
-            <div class="">
+            <div class="trial-input">
                 <input class="" type="email" placeholder="Enter Your Email">
                 <input class="" type="password" placeholder="Enter Your Password">
                 <a href="" class=""> Create Account </a>
             </div>
-            </div>
+            <p>Already have an account? <span> <a href=""> Log in </a> </span> </p>
         </div>
     </section>
+    <div class="div-hr">
+        <hr class="hr">
+    </div>
+    <footer>
+        <div class="footer">
+            <div class="footer-logo">
+                <img src="images/Nav-Logo.png" alt="">
+            </div>
+            <div class="footer-text">
+                <p> We offer a constantly improving service with monthly updates and dedicated customer service, The solution for your company.</p>
+            <div class="footer-links">
+                <ul>
+                    <li> <a href=""> Products </a></li>
+                    <li> <a href=""> About </a></li>
+                    <li> <a href=""> Log in </a></li>
+                </ul>
+            </div>
+            <div class="footer-social">
+                <ul>
+                    <li> <a href=""> <img src="images/facebook.png" alt=""> </a></li>
+                    <li> <a href=""> <img src="images/twitter.png" alt=""> </a></li>
+                    <li> <a href=""> <img src="images/instagram.png" alt=""> </a></li>
+                    <li> <a href=""> <img src="images/linkedin.png" alt=""> </a></li>
+                </ul>
+            </div>
+        </div>
+        <p> © 2021 Hoverbox. Developed by Jino 💙 </p>
+
+    </footer>
 
 
 
