--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             </div>
             <div class="footer-links">
                 <h4> Social & Links </h4>
-                <div>
+                <div class="link-div">
                     <ul>
                         <li> <a href=""> Twitter </a></li>
                         <li> <a href=""> Facebook </a></li>
@@ -185,18 +185,28 @@
             </div>
             <div class="footer-links">
                 <h4> Explore </h4>
-                <div>
+                <div class="link-div">
                     <ul>
                         <li> <a href=""> Blog </a></li>
                         <li> <a href=""> Downloads </a></li>
                         <li> <a href=""> Support</a></li>
                         <li> <a href=""> Learn design  </a></li>
+                        <li> <a href=""> Careers  </a></li>
+                        <li> <a href=""> About us </a></li>
+                    </ul>
+                    <ul>
+                        <li> <a href=""> Privacy </a></li>
+                        <li> <a href=""> Status </a></li>
+                        <li> <a href=""> Terms</a></li>
+                        <li> <a href=""> Security  </a></li>
+                        <li> <a href=""> Conditions  </a></li>
+                        <li> <a href=""> Partners </a></li>
                     </ul>
                 </div>
                 
             </div>
         </div>
-        <p> © 2021 Hoverbox. Developed by Jino 💙 </p>
+        <p class="copyrights"> © 2021 Hoverbox. Developed by Jino 💙 </p>
 
     </footer>
 
