Small Style Class Fix and Added New Style

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             </div>
         </nav>
         <h1 class="anim"> Email, done right. <br> Lightning Fast Mail Client </h1>
-        <p> The best personal email client. <br> Revolutionary email for teams.        </p>
+        <p> The best personal email client.  Revolutionary email for teams. </p>
         <div class="buttons">
             <a href="#" class="demobtn"> Request Demo </a>
-            <a href="#" class="free"> Try hoverbox For Free</a>
+            <a href="#" class="button free"> Try hoverbox For Free</a>
         </div>
         <div>
         <img class="main-img anim" src="images/picture area.png" alt="">
